--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,3 +138,125 @@ img{
 
 
 /*=============== HEADER & NAV ===============*/
+.header{
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: var(--black-color);
+    width: 100%;
+    z-index: var(--z-fixed);
+}
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+    height: var(--header-height);
+    align-items: center;
+    position: relative;
+}
+
+
+.nav__logo{
+    display: flex;
+    column-gap: 0.25rem;
+    align-items: center;
+}
+
+.nav__logo span{
+    color: var(--white-color);
+    font-weight: var(--font-semi-bold);
+    transition: color 0.4s;
+    -webkit-transition: color 0.4s;
+    -moz-transition: color 0.4s;
+    -ms-transition: color 0.4s;
+    -o-transition: color 0.4s;
+}
+
+.nav__logo i{
+    color: var(--first-color);
+    font-size: 1.5rem;
+}
+
+.nav__toggle,
+.nav__close{
+    color: var(--white-color);
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: color 0.4s;
+    -webkit-transition: color 0.4s;
+    -moz-transition: color 0.4s;
+    -ms-transition: color 0.4s;
+    -o-transition: color 0.4s;
+}
+
+/* Navigation for mobile devices */
+@media screen and (max-width: 1150px){
+    .nav__menu{
+        position: fixed;
+        top: 0;
+        right: -100%;
+        height: 100%;
+        background-color: var(--black-color);
+        width: 80%;
+        padding: 7.5rem 3.5rem 0;
+        border-left: 2px solid var(--black-border);
+        transition: right 0.4s;
+        -webkit-transition: right 0.4s;
+        -moz-transition: right 0.4s;
+        -ms-transition: right 0.4s;
+        -o-transition: right 0.4s;
+    }
+}
+
+
+.nav__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 4rem;
+}
+
+.nav__link{
+    color: var(--text-color-light);
+    font-weight: var(--font-semi-bold);
+    transition: color 0.4s;
+    -webkit-transition: color 0.4s;
+    -moz-transition: color 0.4s;
+    -ms-transition: color 0.4s;
+    -o-transition: color 0.4s;
+}
+
+.nav__link:hover {
+    color: var(--first-color);
+}
+
+.nav__close{
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+}
+
+/* Show Menu */
+.show-menu{
+    right: 0;
+}
+
+/* ===================== BUTTON =============== */
+
+.button{
+    display: inline-flex;
+    background: var(--first-gradient);
+    padding: 1rem 2rem;
+    font-weight: var(--font-semi-bold);
+    color: var(--white-color);
+    transition: box-shadow 0.4s;
+    -webkit-transition: box-shadow 0.4s;
+    -moz-transition: box-shadow 0.4s;
+    -ms-transition: box-shadow 0.4s;
+    -o-transition: box-shadow 0.4s;
+}
+
+.button:hover{
+    box-shadow: 0 8px 32px hsla(18, 95%, 55%, 0.3);
+    color: var(--white-color);
+}
+
