--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -142,9 +142,14 @@ img{
     top: 0;
     left: 0;
     position: fixed;
-    background-color: var(--black-color);
+    background-color: transparent;
     width: 100%;
     z-index: var(--z-fixed);
+    transition: background-color 0.4s;
+    -webkit-transition: background-color 0.4s;
+    -moz-transition: background-color 0.4s;
+    -ms-transition: background-color 0.4s;
+    -o-transition: background-color 0.4s;
 }
 
 .nav{
@@ -239,6 +244,132 @@ img{
 .show-menu{
     right: 0;
 }
+
+/* Change background header */
+.bg-header {
+    background-color: var(--body-color);
+    box-shadow: 0 4px 16px hsla(255, 90%, 8%, .1);
+}
+
+.bg-header .nav__logo span,
+.bg-header .nav__toggle{
+    color: var(--title-color);
+}
+
+/* ===================== HOME =============== */
+.home{
+    position: relative;
+    background-color: var(--black-color);
+}
+
+.home__container{
+    position: relative;
+    row-gap: 3rem;
+    padding-block: 2.5rem 6rem; 
+}
+
+.home__content{
+    row-gap: 2.5rem;
+}
+
+.home__data{
+    text-align: center;
+}
+
+.home__title{
+    color: var(--white-color);
+    font-size: var(--big-font-size);
+    font-weight: var(--font-bold);
+    margin-bottom: 1rem;
+}
+
+.home__description{
+    margin-bottom: 2.5rem;
+    color: var(--text-color-light);
+}
+
+.home__buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.button__link{
+    display: flex;
+    align-items: center;
+    column-gap: 0.25rem;
+    color: var(--first-color);
+}
+
+.button__link span{
+    font-weight: var(--font-semi-bold);
+}
+
+.button__link i{
+    font-size: 1.5rem;
+    transition: transform 0.4s;
+    -webkit-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+    -ms-transition: transform 0.4s;
+    -o-transition: transform 0.4s;
+}
+
+.button__link:hover i{
+    transform: translateX(0.25rem);
+    -webkit-transform: translateX(0.25rem);
+    -moz-transform: translateX(0.25rem);
+    -ms-transform: translateX(0.25rem);
+    -o-transform: translateX(0.25rem);
+}
+
+.home__info{
+    display: flex;
+    justify-content: center;
+    column-gap: 4.5rem;
+}
+
+.home__info-title{
+    color: var(--second-color);
+    font-size: var(--big-font-size);
+    margin-bottom: 0.5rem;
+    font-weight: var(--font-bold);
+}
+
+
+.home__info-description{
+    font-size: var(--small-font-size);
+    color: var(--white-color);
+}
+
+.home__images{
+    position: relative;
+    justify-self: center;
+}
+
+.home__img-1{
+    width: 250px;
+    margin-left: 3.5rem;
+}
+
+.home__img-2{
+    width: 150px;
+    border: 5px solid var(--black-border);
+    position: absolute;
+    left: 0;
+    bottom: -3.5rem;
+}
+
+.home__lines{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: right;
+}
+
 
 /* ===================== BUTTON =============== */
 
