--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -589,3 +589,86 @@ img{
     margin-bottom: 1.5rem;
 }
 
+
+/* ===================== CONTACT ===================== */
+.contact__container{
+    row-gap: 3rem;
+    padding-block: 1.5rem 3rem;
+}
+
+
+.contact__img{
+    width: 320px;
+    justify-self: center;
+}
+
+.contact__data{
+    grid-template-columns: 230px;
+    justify-content: center;
+    row-gap: 1.5rem;
+}
+
+.contact__card{
+    background-color: var(--container-color);
+    border: 2px solid var(--gray-border);
+    padding: 1.5rem 2rem;
+    text-align: center;
+    transition: border-color 0.4s;
+    -webkit-transition: border-color 0.4s;
+    -moz-transition: border-color 0.4s;
+    -ms-transition: border-color 0.4s;
+    -o-transition: border-color 0.4s;
+}
+
+.contact__card:hover{
+    border-color: var(--first-color);
+}
+
+.contact__icon{
+    width: 48px;
+    height: 48px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    font-size: 2rem;
+    margin: 0 auto 1.25rem;
+}
+
+.contact__title{
+    font-size: var(--h2-font-size);
+    margin-bottom: 0.5rem;
+}
+
+.contact__info{
+    font-style: normal;
+}
+
+.contact__social{
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+}
+
+.contact__social-link{
+    font-size: 1.5rem;
+    transition: transform 0.4s;
+    color: var(--first-color);
+    -webkit-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+    -ms-transition: transform 0.4s;
+    -o-transition: transform 0.4s;
+}
+
+.contact__social-link:hover{
+    transform: translateY(-0.25rem);
+    -webkit-transform: translateY(-0.25rem);
+    -moz-transform: translateY(-0.25rem);
+    -ms-transform: translateY(-0.25rem);
+    -o-transform: translateY(-0.25rem);
+}
