--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -672,3 +672,103 @@ img{
     -ms-transform: translateY(-0.25rem);
     -o-transform: translateY(-0.25rem);
 }
+
+/* ===================== FOOTER ===================== */
+.footer{
+    background-color: var(--black-color);
+    color: var(--text-color-light);
+    padding-block: 3.5rem 2rem;
+}
+
+.footer__container{
+    row-gap: 4rem;
+    padding-bottom: 4rem;
+    border-bottom: 1px solid var(--black-border);
+}
+
+.footer__logo{
+    display: inline-flex;
+    align-items: center;
+    column-gap: 0.25rem;
+}
+
+.footer__logo span{
+    font-size: var(--h3-font-size);
+    color:var(--white-color);
+    font-weight: var(--font-semi-bold);
+}
+
+.footer__logo i{
+    font-size: 1.5rem;
+    color: var(--first-color);
+}
+
+.footer__description{
+    margin-block: 1rem;
+}
+
+.footer__email,
+.footer__info{
+    font-style: normal;
+}
+
+.footer__content{
+    grid-template-columns: repeat(2, max-content);
+    gap: 4rem 3rem;
+}
+
+
+.footer__title{
+    font-size: var(--h3-font-size);
+    color: var(--white-color);
+    margin-bottom: 1rem;
+}
+
+.footer__links,
+.footer__list{
+    display: grid;
+    row-gap: 0.5rem;
+}
+
+.footer__link{
+    color: var(--text-color-light);
+    transition: color 0.4s;
+    -webkit-transition: color 0.4s;
+    -moz-transition: color 0.4s;
+    -ms-transition: color 0.4s;
+    -o-transition: color 0.4s;
+}
+
+.footer__link:hover{
+    color: var(--first-color);
+}
+
+.footer__social{
+    display: flex;
+    column-gap: 1rem;
+}
+
+.footer__social-link{
+    font-size: 1.5rem;
+    color: var(--first-color);
+    transition: transform 0.4s;
+    -webkit-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+    -ms-transition: transform 0.4s;
+    -o-transition: transform 0.4s;
+}
+
+.footer__social-link:hover{
+    transform: translateY(-0.25rem);
+    -webkit-transform: translateY(-0.25rem);
+    -moz-transform: translateY(-0.25rem);
+    -ms-transform: translateY(-0.25rem);
+    -o-transform: translateY(-0.25rem);
+}
+
+.footer__copy{
+    display: block;
+    text-align: center;
+    font-size: var(--small-font-size);
+    margin-top: 4rem;
+}
