--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -772,3 +772,47 @@ img{
     font-size: var(--small-font-size);
     margin-top: 4rem;
 }
+
+/* ===================== SCROLL BAR ===================== */
+::-webkit-scrollbar{
+    width: 0.6rem;
+    background-color: hsl(255, 5%, 75%);
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: hsl(255, 5%, 65%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: hsl(255, 5%, 55%);
+}
+
+/* ===================== SCROLL Up ===================== */
+.scrollup{
+    position: fixed;
+    right: 1rem;
+    bottom: -50%;
+    color: var(--title-color);
+    background-color: var(--body-color);
+    padding: 6px;
+    font-size: 1.25rem;
+    z-index: var(--z-tooltip);
+    box-shadow: 0 4px 16px hsla(255, 90%, 8%, 0.15);
+    display: inline-flex;
+    transition:bottom 0.4s , transform 0.4s;
+    -webkit-transition:bottom 0.4s , transform 0.4s;
+    -moz-transition:bottom 0.4s , transform 0.4s;
+    -ms-transition:bottom 0.4s , transform 0.4s;
+    -o-transition:bottom 0.4s , transform 0.4s;
+}
+
+.scrollup:hover{
+    transform: translateY(-0.5rem);
+    -webkit-transform: translateY(-0.5rem);
+    -moz-transform: translateY(-0.5rem);
+    -ms-transform: translateY(-0.5rem);
+    -o-transform: translateY(-0.5rem);
+}
+.show-scroll{
+    bottom: 3rem;
+}
